Fix issue with double border on error and focus

--- a/playbook/app/pb_kits/playbook/pb_form_group/_form_group.scss
+++ b/playbook/app/pb_kits/playbook/pb_form_group/_form_group.scss
@@ -218,4 +218,13 @@
       border-left-color: $red;
     }
   }
+
+  .pb_text_input_kit:focus-within + .error,
+  .pb_text_input_kit:focus-within + .pb_select .error {
+    input,
+    select {
+      border-left: none;
+      padding-left: calc(var(--iti-flag-width), 1px);
+    }
+  }
 }
